Fix grid-month bug, Fix order of budgets in menu, Fix expenses overflow issue

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -480,6 +480,16 @@
   padding: 14px 14px 50px 14px;
   text-align: center;
   overflow: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   color: #ffffff;
 }
 
@@ -490,11 +500,24 @@
 }
 
 .category-detail .compressable-content {
-  overflow: hidden;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .category-detail .balance {
-  font-weight: 400;
+  font-weight: 400px;
   font-size: 35px;
   margin: 17px 0 0 0;
 }
@@ -566,7 +589,7 @@
 }
 
 .category-detail .content {
-  max-height: 40%;
+  height: 100%;
   overflow: auto;
   width: 100%;
   text-align: center;
@@ -587,7 +610,7 @@
 }
 
 .category-detail .category-actions {
-  position: absolute;
+  max-height: 50px;
   bottom: 14px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -595,7 +618,7 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: calc(100% - 28px);
+  width: 100%;
 }
 
 #modal {
