--- a/resources/sass/components/category-detail.scss
+++ b/resources/sass/components/category-detail.scss
@@ -6,11 +6,11 @@
   padding: 14px 14px 50px 14px;
   text-align: center;
   overflow: auto;
-  // display: flex;
-  // flex-direction: column;
+  display: flex;
+  flex-direction: column;
   // align-items: center;
   // align-content: space-between;
-  // justify-content: space-between;
+  justify-content: space-between;
   color: #ffffff;
 
   input[type=number]::-webkit-inner-spin-button,
@@ -35,11 +35,15 @@
   // }
 
   .compressable-content {
-    overflow: hidden;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
   }
 
   .balance {
-    font-weight: 400;
+    font-weight: 400px;
     font-size: 35px;
     margin: 17px 0 0 0;
 
@@ -105,7 +109,7 @@
     }
   }
   .content {
-    max-height: 40%;
+    height: 100%;
     overflow: auto;
     width: 100%;
     text-align: center;
@@ -117,24 +121,17 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-
-        .expense-value {
-        }
-        .expense-notes {
-        }
       }
     }
   }
 
   .category-actions {
-    position: absolute;
+    max-height: 50px;    
     bottom: 14px;
     display: flex;
     justify-content: space-between;
-    width: calc(100% - 28px);
-    .close-button {
-
-    }
+    // width: calc(100% - 28px);
+    width: 100%;
   }
 
 }
